--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -27,7 +27,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          user: wouwouwou
+          user: WOUWOUWOU
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Amsterdam
@@ -35,6 +35,12 @@ jobs:
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_visibility: all
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories
@@ -58,12 +64,7 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          plugin_notable: yes
-          plugin_notable_from: organization
-          plugin_notable_types: commit
-          plugin_people: yes
-          plugin_people_limit: 24
-          plugin_people_size: 28
-          plugin_people_types: followers, following
           plugin_projects: yes
           plugin_projects_limit: 4
+          plugin_repositories: yes
+          plugin_repositories_order: featured, pinned, starred, random
